k8s/addons/fake-gcs/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fake-gcs
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: fake-gcs
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - podSelector: {}
      ports:
        - {protocol: TCP, port: 4443}
  egress: []
